; ModuleID = '/home/carl/AnghaBench/kilo/extr_kilo.c_editorSyntaxToColor.c'
source_filename = "/home/carl/AnghaBench/kilo/extr_kilo.c_editorSyntaxToColor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @editorSyntaxToColor(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %11 [
    i32 134, label %5
    i32 130, label %5
    i32 133, label %6
    i32 132, label %7
    i32 128, label %8
    i32 129, label %9
    i32 131, label %10
  ]

5:                                                ; preds = %1, %1
  store i32 36, i32* %2, align 4
  br label %12

6:                                                ; preds = %1
  store i32 33, i32* %2, align 4
  br label %12

7:                                                ; preds = %1
  store i32 32, i32* %2, align 4
  br label %12

8:                                                ; preds = %1
  store i32 35, i32* %2, align 4
  br label %12

9:                                                ; preds = %1
  store i32 31, i32* %2, align 4
  br label %12

10:                                               ; preds = %1
  store i32 34, i32* %2, align 4
  br label %12

11:                                               ; preds = %1
  store i32 37, i32* %2, align 4
  br label %12

12:                                               ; preds = %11, %10, %9, %8, %7, %6, %5
  %13 = load i32, i32* %2, align 4
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
